# aioracle-contract

./: .gitignore  Cargo.toml  README.md
src/: contract.rs  error.rs  executors.rs  lib.rs  msg.rs  state.rs
