[package]
resolver = "2"
name = "aioracle"
version = "0.3.1"
authors = ["Oraichain"]
edition = "2021"
description = "An ai oracle contract using optimistic rollup"
license = "Apache-2.0"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = "1.1.6"
cosmwasm-schema = "1.1.6"
cw-storage-plus = "1.0.1"
cosmwasm-storage = { version = "1.1.9" }
cw2 = "1.0.1"
thiserror = { version = "1.0.27" }
hex = "0.4"
sha2 = { version = "0.9.5", default-features = false }
ripemd = "0.1.1"


